# AI_TrendPulse

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_report_language_to_tasks.py  0002_add_report_language_to_subscriptions.py  0003_sub_task_link.py  0004_semantic_sampling.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/analyzers/: __init__.py  clustering.py  embedding_sampler.py  llm_client.py  llm_validators.py  mermaid.py  preprocessor.py  sentiment.py
backend/app/api/: __init__.py  alerts.py  deps.py  platforms.py  subscriptions.py  tasks.py
backend/app/collectors/: __init__.py  base.py  reddit.py  x.py  youtube.py
backend/app/models/: __init__.py  alert.py  analysis_result.py  raw_data.py  subscription.py  task.py
backend/app/schemas/: __init__.py  analysis.py  subscription.py  task.py
backend/app/services/: __init__.py  scheduler_service.py
backend/app/utils/: __init__.py  logger.py
backend/app/workers/: __init__.py  analyze_tasks.py  celery_app.py  collect_tasks.py  scheduled_tasks.py
backend/prompts/: __init__.py  analysis_prompts.py
backend/scripts/: __init__.py  init_db.py  user_agent_generator.py
backend/tests/: test_llm_client.py  test_reddit.py  test_x_collector.py
docs/: AI分析.md  usage.md  技术框架说明.md  数据采集.md  运行说明.md
docs/plans/: 2026-01-13-ai-sentiment-analysis-design.md  2026-01-13-implementation-plan.md
frontend/: README.md  pubspec.yaml
(+39 files in other folders)
