[project]
name = "ai-sentiment-backend"
version = "0.1.0"
description = "AI舆情分析系统后端"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "praw>=7.7.0",
    "youtube-transcript-api>=0.6.0",
    "google-api-python-client>=2.100.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "langdetect>=1.0.9",
    "openai>=1.30.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
]
